# tile-lite-elite

./: .dockerignore  .gitignore  Caddyfile  Caddyfile.staging  Cargo.toml  Dockerfile  IMPLEMENTATION_STATUS.md  auth-security.patch  desktop-height.patch  docker-compose.staging.yml  docker-compose.yml  docs-update.patch  drop-loaded-game-toast.patch  engine-timeout-and-doc-fix.patch  login-ui-fix.patch  login-ui.patch  recent-moves-alignment.patch  scroll-fix.patch  sqlite-create-if-missing.patch  ui-tidy-up.patch
.cargo/: config.toml
.github/workflows/: ci.yml
crates/admin-cli/: Cargo.toml
crates/admin-cli/src/: main.rs
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/engine-core/: Cargo.toml
crates/engine-core/src/: lib.rs
crates/first-try/: Cargo.toml
crates/first-try/src/: board.rs  main.rs  player.rs  pos.rs  tiles.rs
crates/rules-shared/: Cargo.toml
crates/rules-shared/examples/: basic_flow.rs  repro_lexicon.rs
crates/rules-shared/src/: board.rs  cache.rs  dictionary.rs  format.rs  generate.rs  lib.rs  model.rs  score.rs  validate.rs
crates/scrabble/: Cargo.toml
crates/scrabble-ui/: Cargo.toml  Dioxus.toml  build-windows.sh  run-desktop-linux.sh
crates/scrabble-ui/assets/: desktop.html
crates/scrabble/src/: board.rs  lib.rs  main.rs  pos.rs  tiles.rs
crates/second-try/: Cargo.toml
crates/second-try/documents/: swim lanes.vsdx
crates/second-try/src/: board.rs  main.rs  notes.txt  player.rs  utils.rs  word_list.rs
crates/server-game/: Cargo.toml  build.rs
crates/server-game/emails/: invitation.txt  join-invitation.txt  move-reminder.txt  password-reset.txt  welcome.txt
crates/server-game/examples/: engine_timing_bench.rs  engine_timing_results.csv
crates/server-game/migrations/: 0001_baseline.sql  0002_player_ratings_and_stats.sql  0003_drop_dead_columns.sql  0004_timestamps_to_integer.sql  0005_case_insensitive_display_name.sql  README.md
crates/server-game/src/: app.rs  email.rs  game_state.rs  lib.rs  main.rs  persistence.rs  stats.rs
crates/server-game/src/app/: admin.rs  auth.rs  catalog.rs  common.rs  error.rs  events.rs  games.rs  invitations.rs  ratings.rs  roster.rs  sweeps.rs  tests.rs
crates/ui/: Cargo.toml  Dioxus.toml  LICENSE  README.md  build-windows.sh  run-desktop-linux.sh
crates/ui/assets/: desktop.html
crates/ui/assets/styling/: main.css
crates/ui/src/: app.rs  client_rules.rs  config.rs  edition_label.rs  local_storage.rs  main.rs  tile_value.rs  time_format.rs
crates/ui/src/components/: auth_panel.rs  board_view.rs  games_panel.rs  mod.rs  rack_view.rs  rating_chart.rs  scrabble_board.rs  sidebar.rs
crates/ui/src/views/: home.rs  mod.rs  reset_password.rs  stats.rs
data/: scrabble-px.sqlite3  tile-lite-elite.sqlite3
docs/: 1.1-architecture.md  1.2-components-and-interactions.md  1.3-technology-decisions.md  1.4-roadmap.md  2.2-rules-engine-implementation.md  2.4-persistence.md  2.5-authentication.md  2.6-authentication-examples.md  2.7-authentication-and-invitations.md  3.0-tools.md  3.1-setup.md  3.2-development.md  3.3-testing-and-staging.md  3.3-testing-ci-and-release.md  3.4-deployment.md  3.4-production-environment.md  3.5-production-support.md  4.1-configuration.md  4.2-database-schema.md  4.3-api-schema.md  4.4-snapshot-json-schema.md  4.5-data-dictionary.md  4.6-client-local-storage.md  README.md  architecture.md  authentication-and-invitations.md  authentication-examples.md  authentication.md  components-and-interactions.md  engine-interface.md  history.md  operations.md  persistence.md  roadmap.md  rules-engine.md  schema.md  technology-decisions.md
e2e/: README.md  global-teardown.ts  package-lock.json  package.json  playwright.config.ts
e2e/tests/: helpers.ts  smoke.spec.ts
old-crates/first-try/: Cargo.toml
old-crates/second-try/: Cargo.toml
scripts/: admin.sh  deploy-staging.sh  deploy.sh  desktop.sh  e2e-clean.sh  services.sh  setup-dev-environment.sh
