[workspace]
resolver="3"
members=["crates/*", "old-crates/*"]
default-members=["crates/*"]
[workspace.dependencies]
srm-utils = {path = "../utils"}


[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[workspace.package]
edition="2024"
