[package]
name = "admin-cli"
version = "0.3.5"
edition.workspace=true

[[bin]]
name = "tile-lite-elite-admin"
path = "src/main.rs"

[dependencies]
api = { path = "../api" }
clap = { version = "4", features = ["derive", "env"] }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
serde_json = "1"
