[package]
name = "scrabble"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
itertools = "0.10.5"
lazy_static = "1.4.0"
num-traits = "0.2.15"
rand = "0.8.5"
regex = "1.7.1"
termcolor = "1.2.0"
