[package]
name = "server-game"
version = "0.1.0"
edition.workspace=true

[dependencies]
api = { path = "../api" }
argon2 = "0.5"
axum = { version = "0.8", features = ["ws", "macros"] }
engine-core = { path = "../engine-core" }
rand = "0.8"
rules-shared = { path = "../rules-shared" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "net", "time"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors"] }
uuid = { version = "1", features = ["v4", "serde"] }
