[package]
name = "scrabble-ui"
version = "0.1.0"
authors = ["Stephen Morris"]
edition.workspace=true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api = { path = "../api" }
dioxus = { version = "0.6", features = ["web"] }
dioxus-web = "0.6.3"
dioxus-desktop = { version = "0.6", optional = true }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-net = { version = "0.6", features = ["http", "websocket"] }
js-sys = "0.3"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop", "dep:dioxus-desktop"]


