[package]
name = "tile-lite-elite-ui"
version = "0.3.4"
authors = ["Stephen Morris"]
edition.workspace=true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api = { path = "../api" }
rules-shared = { path = "../rules-shared" }
dioxus = { version = "0.6", features = ["web"] }
dioxus-web = "0.6.3"
dioxus-desktop = { version = "0.6", optional = true }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dirs = "5"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
tokio = { version = "1", features = ["time"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-net = { version = "0.6", features = ["http", "websocket"] }
gloo-storage = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window", "Location", "History"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop", "dep:dioxus-desktop"]


